--- a/MainStoryboard.storyboard
+++ b/MainStoryboard.storyboard
@@ -38,11 +38,11 @@
             <objects>
                 <viewController id="iM5-Ub-36B" customClass="MainViewController" sceneMemberID="viewController">
                     <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="PKd-ZK-J46">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="xNU-6b-KDo" customClass="AGSMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="504"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="WMH-u5-Ync">
                                         <rect key="frame" x="-22" y="280" width="131" height="41"/>
@@ -165,6 +165,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="FH0-9f-Ia2"/>
+        <segue reference="cJx-7g-Az5"/>
     </inferredMetricsTieBreakers>
 </document>
