--- a/MainViewController.xib
+++ b/MainViewController.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.SystemVersion">12E55</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
 		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -16,7 +16,6 @@
 			<string>IBUIActivityIndicatorView</string>
 			<string>IBUIBarButtonItem</string>
 			<string>IBUIButton</string>
-			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUINavigationBar</string>
 			<string>IBUINavigationItem</string>
@@ -57,7 +56,7 @@
 								<string key="NSFrame">{{-22, 280}, {131, 41}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="102608451"/>
+								<reference key="NSNextKeyView" ref="87304622"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -124,28 +123,13 @@
 								</object>
 								<reference key="IBUIFont" ref="864579667"/>
 							</object>
-							<object class="IBUIImageView" id="102608451">
-								<reference key="NSNextResponder" ref="466115531"/>
-								<int key="NSvFlags">268</int>
-								<string key="NSFrame">{{258, 366}, {57, 40}}</string>
-								<reference key="NSSuperview" ref="466115531"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="87304622"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">erslogo_orig.png</string>
-								</object>
-							</object>
 							<object class="IBUILabel" id="940269213">
 								<reference key="NSNextResponder" ref="466115531"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{11, 199}, {299, 25}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="501330398"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -161,11 +145,11 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="413468110">
 									<int key="type">1</int>
 									<double key="pointSize">17</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="696868312">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">17</double>
 									<int key="NSfFlags">16</int>
@@ -178,7 +162,7 @@
 								<string key="NSFrameSize">{320, 44}</string>
 								<reference key="NSSuperview" ref="466115531"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="874665077"/>
+								<reference key="NSNextKeyView" ref="91535403"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSArray" key="IBUIItems">
@@ -248,7 +232,6 @@
 								<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 								<reference key="NSSuperview" ref="466115531"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -274,6 +257,31 @@
 										<reference key="IBUIToolbar" ref="162166006"/>
 									</object>
 								</object>
+							</object>
+							<object class="IBUILabel" id="91535403">
+								<reference key="NSNextResponder" ref="466115531"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{6, 49}, {199, 19}}</string>
+								<reference key="NSSuperview" ref="466115531"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="874665077"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAAA</bytes>
+								</object>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Label</string>
+								<reference key="IBUITextColor" ref="86076774"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<reference key="IBUIFontDescription" ref="413468110"/>
+								<reference key="IBUIFont" ref="696868312"/>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</object>
 						<string key="NSFrameSize">{320, 460}</string>
@@ -372,6 +380,14 @@
 						<reference key="destination" ref="940269213"/>
 					</object>
 					<int key="connectionID">66</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">currentMapLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="91535403"/>
+					</object>
+					<int key="connectionID">68</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -473,9 +489,9 @@
 							<reference ref="273637634"/>
 							<reference ref="874665077"/>
 							<reference ref="87304622"/>
-							<reference ref="102608451"/>
 							<reference ref="501330398"/>
 							<reference ref="162166006"/>
+							<reference ref="91535403"/>
 						</object>
 						<reference key="parent" ref="774585933"/>
 					</object>
@@ -487,11 +503,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
 						<reference key="object" ref="874665077"/>
-						<reference key="parent" ref="466115531"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">12</int>
-						<reference key="object" ref="102608451"/>
 						<reference key="parent" ref="466115531"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -579,6 +590,11 @@
 						<reference key="object" ref="646569322"/>
 						<reference key="parent" ref="162166006"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">67</int>
+						<reference key="object" ref="91535403"/>
+						<reference key="parent" ref="466115531"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -591,7 +607,6 @@
 					<string>-2.IBPluginDependency</string>
 					<string>10.CustomClassName</string>
 					<string>10.IBPluginDependency</string>
-					<string>12.IBPluginDependency</string>
 					<string>20.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>30.IBPluginDependency</string>
@@ -608,6 +623,7 @@
 					<string>59.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>60.IBPluginDependency</string>
+					<string>67.IBPluginDependency</string>
 				</object>
 				<object class="NSArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -648,7 +664,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">66</int>
+			<int key="maxID">68</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -731,6 +747,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>activityIndicator</string>
 							<string>activityLabel</string>
+							<string>currentMapLabel</string>
 							<string>findMeButton</string>
 							<string>infoButton</string>
 							<string>legendButton</string>
@@ -740,6 +757,7 @@
 						<object class="NSArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIActivityIndicatorView</string>
+							<string>UILabel</string>
 							<string>UILabel</string>
 							<string>UIBarButtonItem</string>
 							<string>UIButton</string>
@@ -754,6 +772,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>activityIndicator</string>
 							<string>activityLabel</string>
+							<string>currentMapLabel</string>
 							<string>findMeButton</string>
 							<string>infoButton</string>
 							<string>legendButton</string>
@@ -768,6 +787,10 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">activityLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">currentMapLabel</string>
 								<string key="candidateClassName">UILabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
@@ -815,13 +838,11 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>erslogo_orig.png</string>
 				<string>index-cards.png</string>
 				<string>map.png</string>
 			</object>
 			<object class="NSArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{72, 72}</string>
 				<string>{26, 17}</string>
 				<string>{26, 21}</string>
 			</object>
